Update easyinstall-rpm-guacamole.sh